Fixed AMP-861
git-svn-id: file:///svn/branches/amp-bolivia-nov06@965 9e8d75aa-d0cb-44a9-8341-a4b8ba1a38b4